# g

./: .gitmodules
assets/glad/include/glad/: glad.h
assets/glad/src/: glad.c
samples/hello_triangle/: CMakeLists.txt
samples/hello_triangle/src/: main.c
